# serlo-docgen

./: .gitignore  Cargo.toml  notes.txt
commons/: Cargo.toml
commons/derive/: Cargo.toml
commons/derive/src/: lib.rs  spec.rs  util.rs
commons/src/: lib.rs  spec.rs  spec_utils.rs  templates.yml  transformations.rs  util.rs
src/: anchors.rs  deps.rs  latex.rs  lib.rs  meta.rs  mfnf_ex.rs  mfnftrans.rs  pdf.rs  sections.rs  settings.rs  stats.rs  target.rs  transformations.rs  traversion.rs  util.rs
src/anchors/: mod.rs
src/compose/: mod.rs  transformations.rs
src/edtr/: mod.rs
src/formula/: mod.rs
src/html/: mod.rs  renderer.rs
src/html/renderer/: list.rs  media.rs  mod.rs  simpletypes.rs  table.rs  template.rs
src/latex/: mod.rs  trans.rs
src/latex/renderer/: blobs.rs  gallery.rs  html.rs  iref.rs  list.rs  mod.rs  simple.rs  table.rs  template.rs
src/normalize/: mod.rs  transformations.rs
src/pdf/: mod.rs
src/sections/: filter.rs  finder.rs  mod.rs
src/serlo/: mod.rs  renderer.rs
src/stats/: mod.rs
src/test/: latex.rs  mod.rs
templates/: article.tex
