[package]
name = "mfnf_export"
version = "0.1.0"
authors = ["Valentin Roland <valentin@vroland.de>"]

[[bin]]
name = "mfnf_ex"
path = "src/mfnf_ex.rs"
doc = true

[dependencies]
mediawiki_parser = "0.3"
mwparser_utils = { git = "https://github.com/vroland/mediawiki-parser-utils" }
mfnf_template_spec = { git = "https://github.com/vroland/mfnf-template-spec" }
mfnf-sitemap-parser = { git = "https://github.com/vroland/mfnf-sitemap-parser" }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
colored = "1.6"
structopt = "0.2"
toml = "0.4"
base64 = "0.9"
