[package]
name = "mfnf_export"
version = "0.1.0"
authors = ["Valentin Roland <valentin@vroland.de>"]
edition = "2018"

[[bin]]
name = "mfnf_ex"
path = "src/mfnf_ex.rs"
doc = true

[dependencies]
mediawiki_parser = "0.4"
mwparser_utils = { git = "https://github.com/vroland/mediawiki-parser-utils" }
mfnf_template_spec = { git = "https://github.com/vroland/mfnf-template-spec" }
mfnf-sitemap-parser = { git = "https://github.com/vroland/mfnf-sitemap-parser" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
colored = "1.6"
structopt = "0.2"
base64 = "0.9"
