[package]
name = "mfnf_export"
version = "0.1.0"
authors = ["Valentin Roland <valentin@vroland.de>"]
edition = "2021"

[[bin]]
name = "mfnf_ex"
path = "src/mfnf_ex.rs"
doc = true

[dependencies]
mediawiki_parser = "0.4"
mwparser_utils = { git = "https://github.com/serlo/mediawiki-parser-utils" }
mfnf_template_spec = { git = "https://github.com/serlo/mfnf-template-spec" }
mfnf-sitemap-parser = { git = "https://github.com/serlo/mfnf-sitemap-parser" }
serlo_he_spec = { git = "https://github.com/serlo/serlo-he-spec" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
colored = "1.6"
structopt = "0.2"
base64 = "0.9"
uuid = { version = "0.7", features = ["serde", "v5"] }
